--- a/Droid/Resources/layout/medication_summary_item.axml
+++ b/Droid/Resources/layout/medication_summary_item.axml
@@ -1,26 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:local="http://schemas.android.com/apk/res-auto"
+    android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:padding="5dp">
-    <TextView
-        android:layout_width="match_parent"
+    android:padding="6dip">
+    <Button
+        android:text="Zdjęcia"
+        android:id="@+id/pictureButton"
+        android:layout_width="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_toRightOf="@+id/label_medication_time"
         android:layout_height="wrap_content"
-        android:id="@+id/label_medication_name"
-        android:textColor="@android:color/primary_text_light"
-        xmlns:tools="http://schemas.android.com/tools"
-        tools:text="Medication name" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/label_medication_time"
-        xmlns:tools="http://schemas.android.com/tools"
-        tools:text="Time of orditaion" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/label_medication_days_of_week"
-        xmlns:tools="http://schemas.android.com/tools"
-        tools:text="Days of week of ordination" />
-</LinearLayout>
+        android:background="?attr/colorAccent"
+        android:focusable="false" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+        <TextView xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/label_medication_name"
+            android:textColor="@android:color/primary_text_light"
+            tools:text="Medication name" />
+        <TextView xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/label_medication_time"
+            tools:text="Time of orditaion" />
+        <TextView xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/label_medication_days_of_week"
+            tools:text="Days of week of ordination" />
+    </LinearLayout>
+</RelativeLayout>
